test/Fail/Issue1467.err
Issue1467.agda:25.14-19: error: [UnequalTerms]
The terms
  (D → D) × D
and
  D → D
are not equal at type Set
when checking that the expression bar H has type P (foo H)
